[package]
name = "asap2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
compute-constant = ["dep:deno_core"]

[dependencies]
bitflags = "1.3.2"
strum = "0.24.1"
strum_macros = "0.24.1"
asap2_derive = {path = "./asap2_derive"}
deno_core = { version = "0.139.0", optional = true }
